# EscolarBH

./: .gitignore  PROJECT_CONTEXT.md  README.md  Starting The Escolarbh API.md  contract.html  docker-compose.prod.yml  implementation_plan.md  supabase_schema.sql
.github/workflows/: ci-api.yml  ci-geo.yml  ci-web.yml
docs/legal/: politica_de_privacidade.md  template_contrato_transporte.md
escolarbh-api/: .env.example  Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
escolarbh-api/src/main/resources/: application.yml
escolarbh-app/: App.tsx  app.json  package-lock.json  package.json
escolarbh-app/src/: theme.ts
escolarbh-app/src/components/: Map.tsx  Map.web.tsx
escolarbh-app/src/hooks/: AuthProvider.tsx
escolarbh-app/src/screens/: LoginScreen.tsx  OnboardingScreen.tsx  RegisterScreen.tsx
escolarbh-app/src/screens/driver/: ContractsScreen.tsx  DriverDashboardScreen.tsx  DriverFinanceScreen.tsx  DriverHomeScreen.tsx  (+2 more)
escolarbh-app/src/services/: LocationTrackingService.ts  api.ts  notifications.ts  supabaseClient.ts
escolarbh-geo/: Cargo.toml  Dockerfile
escolarbh-geo/src/: geo_engine.rs  handlers.rs  main.rs  models.rs
escolarbh-web/: Dockerfile  index.html  package-lock.json  package.json
escolarbh-web/src/: App.tsx  index.css
escolarbh-web/src/components/: AdesaoForm.tsx  ContractTemplatePDF.tsx  GeofenceMap.tsx
escolarbh-web/src/hooks/: AuthProvider.tsx
escolarbh-web/src/pages/: Landing.tsx  Login.tsx  Register.tsx
escolarbh-web/src/services/: api.ts  supabaseClient.ts
escolarbh-web/src/utils/: validators.ts
(+90 files in other folders)
