[package]
name = "escolarbh-geo"
version = "0.1.0"
edition = "2021"
authors = ["EscolarBH Team"]
description = "Microserviço de geofencing de alta performance para EscolarBH"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Geoespacial
geo = "0.28"
geo-types = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Variáveis de ambiente
dotenvy = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (para buscar polígonos do Supabase)
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
